--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
 <body>
     <header>
         <h1>Semana 10</h1>
+        <h2>Scripts externos</h2>
     </header>
    
     <main>
-        <form name="entrada"> 
-            <label for="valor">Valor:</label>  <!--conecta esse rotulo ao input certo para quando clilcar em cima ja ativa o local de escrita -->
-            <input type="number" name="valor" id="valor" title="Valor
-            a ser inserido" />
-            <input type="submit" value="Adicionar" />
-        </form>
-        <ol>
-
-        </ol>
+        <section id="formulario">
+            <form name="entrada"> 
+                <label for="valor">Valor:</label>  <!--conecta esse rotulo ao input certo para quando clilcar em cima ja ativa o local de escrita -->
+                <input type="number" name="valor" id="valor" title="Valor
+                a ser inserido" />
+                <input type="submit" value="Adicionar"/>
+            </form>
+        </section>
+        <section id="items">
+            <h1>Itens</h1>
+            <ol>
+    
+            </ol>
+        </section>
     </main>
     <footer>
         <p>&copy; Caio Braida - 2023</p>
