--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    
     <main>
         <section id="formulario">
+            <h1>Entrada</h1>
             <form name="entrada"> 
                 <label for="valor">Valor:</label>  <!--conecta esse rotulo ao input certo para quando clilcar em cima ja ativa o local de escrita -->
                 <input type="number" name="valor" id="valor" title="Valor
@@ -24,7 +25,7 @@
                 <input type="submit" value="Adicionar"/>
             </form>
         </section>
-        <section id="items">
+        <section id="itens">
             <h1>Itens</h1>
             <ol>
     
