--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    
     <main>
         <section id="formulario">
+            <!-- h1 dentro do section filho, equivale a um h2 -->
             <h1>Entrada</h1>
             <form name="entrada"> 
                 <label for="valor">Valor:</label>  <!--conecta esse rotulo ao input certo para quando clilcar em cima ja ativa o local de escrita -->
