adiciona script embutido

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
     <footer>
         <p>&copy; Caio Braida - 2023</p>
     </footer>
+    <script>
+        const form = document.forms.entrada; //pegando forms sem queryselectror
+        form.addEventListener('submit', envia);
+
+        function envia(evento){
+            evento.preventDefault(); //n deixa formulario ser enviado
+            console.log('Formulário enviado!');
+        }
+    </script>
 </body>
 
 </html>
