separa scropt em arquivo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css"/>
+    <script src="main.js"></script>
     <title>Semana 10</title>
 </head>
 
@@ -36,15 +37,6 @@
     <footer>
         <p>&copy; Caio Braida - 2023</p>
     </footer>
-    <script>
-        const form = document.forms.entrada; //pegando forms sem queryselectror
-        form.addEventListener('submit', envia);
-
-        function envia(evento){
-            evento.preventDefault(); //n deixa formulario ser enviado
-            console.log('Formulário enviado!');
-        }
-    </script>
 </body>
 
 </html>
