--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css"/>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script> 
+    <!-- defer -> so carrega script dps que carregar pagina -->
     <title>Semana 10</title>
 </head>
 
