--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <input type="number" name="valor" id="valor" title="Valor
                 a ser inserido" />
                 <input type="submit" value="Adicionar"/>
+                <input type="button" value="Remover" name="remover"/>
             </form>
         </section>
         <section id="itens">
